// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownViewer render should be able to render properly custom components not separated by \\n\\n 1`] = `
<div
  className="markdown-viewer"
>
  <MarkdownMedia
    compact={false}
    config="(youtubeUrl)"
    key="0"
  />
  

  <MarkdownMedia
    compact={false}
    config="(mediaUrl)"
    key="2"
  />
  

</div>
`;

exports[`MarkdownViewer render should not render html by default 1`] = `
"<div class=\\"markdown-viewer\\"><p>&lt;div&gt;&lt;h1&gt;should be all a escaped string&lt;/h1&gt;&lt;/div&gt;</p>
</div>"
`;

exports[`MarkdownViewer render should remove Dataset and Query tags 1`] = `
<div
  className="markdown-viewer"
>
  <p
    key="0"
  >
    test
  </p>
  

  

  

  <SearchBox
    classname=""
    key="6"
    placeholder=""
  />
  

  

  <div
    key="10"
  >
    test
  </div>
  

</div>
`;

exports[`MarkdownViewer render should remove whitespaces between table tags (to prevent react warning) 1`] = `
"<div class=\\"markdown-viewer\\"><table><thead><tr><th>cadh</th><th>cbdp</th><th>cidfp</th><th>cipst</th></tr></thead><tbody><tr><td>1.1,25.1</td><td></td><td></td><td></td></tr><tr><td>1.1,21.1,21.2,25,1</td><td></td><td></td><td></td></tr></tbody></table>
</div>"
`;

exports[`MarkdownViewer render should render Link 1`] = `
"<div className=\\"markdown-viewer\\">
  <Link url=\\"this_is_the_url\\" onlyActiveOnIndex={false} style={{...}}>
    this is a label
  </Link>
  
  
  <MarkdownLink url=\\"the_url\\" classname=\\"\\">
    label
  </MarkdownLink>
  
  
</div>"
`;

exports[`MarkdownViewer render should render a searchbox 1`] = `
"<div className=\\"markdown-viewer\\">
  <SearchBox placeholder=\\"this is a placeholder\\" classname=\\"\\" />
  
  
</div>"
`;

exports[`MarkdownViewer render should render markdown 1`] = `
"<div class=\\"markdown-viewer\\"><h2>title</h2>
<p>Some text with a <a href=\\"http://google.com\\">URL</a> inside.</p>
<p>Which should be in its own line, separated with TWO line breaks (to create a new &lt;p&gt; Element)</p>
<pre><code class=\\"language-javascript\\">Code
</code></pre>
</div>"
`;

exports[`MarkdownViewer render should render media components 1`] = `
"<div className=\\"markdown-viewer\\">
  <div>
    <MarkdownMedia config=\\"(1234, options)\\" compact={false} />
    
    
  </div>
  
  
  <MarkdownMedia config=\\"(1234)\\" compact={false} />
  
  
  <MarkdownMedia config=\\"(config options)\\" compact={false} />
  
  
</div>"
`;

exports[`MarkdownViewer render should render properly a selfclosing XML tags 1`] = `
"<div className=\\"markdown-viewer\\">
  <p>
    test
  </p>
  
  
  <SearchBox placeholder=\\"\\" classname=\\"\\" />
  
  
  <div>
    test
  </div>
  
  
</div>"
`;

exports[`MarkdownViewer render should render single tags as self closing 1`] = `
"<div className=\\"markdown-viewer\\">
  <p>
    test
  </p>
  
  
  <hr />
  
  
  <p>
    test
  </p>
  
  
</div>"
`;

exports[`MarkdownViewer render should support containers with custom classNames 1`] = `
<div
  className="markdown-viewer"
>
  <div
    className="test classname"
    key="0"
  >
    <p
      key="0"
    >
      text inside a div
    </p>
    

  </div>
</div>
`;

exports[`MarkdownViewer render when not valid html should not fail 1`] = `
"<div class=\\"markdown-viewer\\"><div>&lt;h</div>
</div>"
`;

exports[`MarkdownViewer render when passing html true prop should render customComponents nested inside html 1`] = `
<div
  className="markdown-viewer"
>
  <div
    key="0"
  >
    <ItemList
      items={
        Array [
          "items1",
        ]
      }
      key="0"
      link="/library/param1"
      options={
        Object {
          "option1": "optionValue",
        }
      }
    />
    

    <div
      key="2"
    >
      

      <MarkdownMedia
        compact={false}
        config="(url)"
        key="1"
      />
      

    </div>
  </div>
  

</div>
`;

exports[`MarkdownViewer render when passing html true prop should render html 1`] = `
"<div class=\\"markdown-viewer\\"><div><h1>test</h1></div>
</div>"
`;
